# ldp_progetto_finale

./: CMakeLists.txt  README.md  README.txt  main
include/: Ciclo.h  Dispositivo.h  Manuale.h  Sistema.h
logs/: log.txt  log2.txt
src/: Ciclo.cpp  Dispositivo.cpp  Manuale.cpp  Sistema.cpp  main.cpp
src/utilities/: comandi.txt  comandi2.txt  dispositivi.txt
